k8s/apps/networking/templates/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - argocd.home.arpa
      secretName: home-arpa-tls
  rules:
    - host: argocd.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
